tests/suppress_incremental/suppress_incremental.exp
After start:
No errors!

After introducing an error:
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:3:2
   3| (123: string); // error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // error
            ^^^^^^ [2]



Found 1 error

After suppressing the error:
No errors!

After fixing the error, leaving the suppression:
Warning ---------------------------------------------------------------------------------------------------- test.js:3:1

Unused suppression comment.

   3| // $FlowIssue[incompatible-cast]
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 1 warning

After removing the unused suppression:
No errors!
